fix button and text overlap on content page

--- a/src/app/pages/content/content.component.scss
+++ b/src/app/pages/content/content.component.scss
@@ -12,6 +12,7 @@
         width: 100vw;
         height: 100vh;
         scroll-snap-align: start;
+        flex-direction: column;
 
         &:nth-of-type(1) {
             background-color: rgb(255, 255, 255);
@@ -38,8 +39,8 @@
             color: black;
         }
 
-        .heading {
-            width: 100%;
+        button {
+            margin: 1em;
         }
     }
 
